force-app/main/default/objects/Quotation__c/Quotation__c.object-meta.xml
<CustomObject>
    <description>freee quotation header for creating estimates.</description>
    <label>見積</label>
    <nameField>
        <displayFormat>QT-{000000}</displayFormat>
        <label>見積番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>