force-app/main/default/objects/Quotation__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <label>見積期日</label>
    <type>Date</type>
</CustomField>