force-app/main/default/objects/Quotation__c/fields/Freee_Account_Item_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Freee_Account_Item_Picklist__c</fullName>
    <label>Freee勘定科目</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sales</fullName>
                <default>true</default>
                <label>sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>