force-app/main/default/objects/Quotation__c/fields/Freee_Quotation_Id__c.field-meta.xml
<CustomField>
    <fullName>Freee_Quotation_Id__c</fullName>
    <label>freee見積書ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>