force-app/main/default/objects/Quotation__c/fields/Freee_Quotation_Number__c.field-meta.xml
<CustomField>
    <fullName>Freee_Quotation_Number__c</fullName>
    <label>freee見積書番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>