force-app/main/default/objects/Quotation__c/fields/Freee_Quotation_URL__c.field-meta.xml
<CustomField>
    <fullName>Freee_Quotation_URL__c</fullName>
    <label>見積書URL</label>
    <type>Url</type>
</CustomField>