force-app/main/default/objects/Quotation__c/fields/Freee_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Freee_Sync_Status__c</fullName>
    <label>freee同期ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>