force-app/main/default/objects/Quotation__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <label>発行日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>