force-app/main/default/objects/Quotation__c/fields/Oppotunity__c.field-meta.xml
<CustomField>
    <fullName>Oppotunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>親取引</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>見積</relationshipLabel>
    <relationshipName>Quoate</relationshipName>
    <type>Lookup</type>
</CustomField>