force-app/main/default/objects/Quotation__c/fields/Quotation_Status__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Status__c</fullName>
    <label>見積ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <label>下書き</label>
            </value>
            <value>
                <fullName>Sent</fullName>
                <label>送付済み</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <label>承認済み</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>却下</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>