force-app/main/default/objects/Quotation__c/fields/QuotationNote__c.field-meta.xml
<CustomField>
    <fullName>QuotationNote__c</fullName>
    <description>freee見積書の備考欄に連携する顧客向け備考。</description>
    <label>見積書備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>