force-app/main/default/objects/Quotation__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <label>再送回数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>