force-app/main/default/objects/Quotation__c/fields/Sent_To_Freee__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Freee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>送信フラグ</label>
    <type>Checkbox</type>
</CustomField>