force-app/main/default/objects/Quotation__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <label>合計金額</label>
    <summarizedField>QuotationLine__c.Line_Amount__c</summarizedField>
    <summaryForeignKey>QuotationLine__c.Quotation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>