force-app/main/default/objects/Quotation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Subject__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Freee_Sync_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>