force-app/main/default/objects/Quotation__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>